# Bumper-Bot

./: .gitignore  README.md
CAD/base/: camera_link.SLDASM  camera_link.STEP  caster_link.SLDASM  caster_link.STEP  motor_support.SLDPRT  waffle_caster_support.sldprt  waffle_front_base_plate.SLDPRT  waffle_rear_base_plate.SLDPRT  wheel_right_link.SLDASM
CAD/electronics/: JGA25-370.SLDPRT
CAD/others/: beer.SLDPRT
bumperbot_hardware/base/: SUPPORT_HEX_M3_0XL35_FF.sldprt  SUPPORT_HEX_M3_0XL45_FF.sldprt  camera_stand_reversed.SLDPRT  imu_link.SLDASM  imu_link.STEP  waffle_caster_ball.sldprt  waffle_front_base_plate.SLDPRT  waffle_rear_base_plate.SLDPRT  waffle_rear_plate.sldprt  wheel_left_link.SLDASM
bumperbot_hardware/electronics/: JGA25-370.SLDPRT  RPi cam Rev 1.3.SLDPRT
bumperbot_hardware/others/: coke.SLDPRT
bumperbot_localization/rviz/: global_localization.rviz
bumperbot_mapping/rviz/: slam.rviz
bumperbot_ws/install/: local_setup.sh  setup.sh
bumperbot_ws/log/: latest_build
bumperbot_ws/src/bumperbot_controller/: CMakeLists.txt  package.xml
bumperbot_ws/src/bumperbot_controller/bumperbot_controller/: noisy_controller.py  simple_controller.py
bumperbot_ws/src/bumperbot_controller/config/: bumperbot_controllers.yaml  control.rviz  joy_teleop.yaml  joystick.yaml  simple_controller.yaml  simple_controllers.yaml  twist_mux_locks.yaml  wheel_controller.yaml
bumperbot_ws/src/bumperbot_controller/launch/: controller.launch  controller.launch.py  joystick_teleop.launch  joystick_teleop.launch.py
bumperbot_ws/src/bumperbot_controller/nodes/: simple_controller_node.cpp
bumperbot_ws/src/bumperbot_controller/src/: noisy_controller.cpp  simple_controller.cpp
bumperbot_ws/src/bumperbot_cpp_examples/: CMakeLists.txt
bumperbot_ws/src/bumperbot_demo/: CMakeLists.txt  package.xml
bumperbot_ws/src/bumperbot_demo/launch/: bumperbot_localization.launch  bumperbot_mapping.launch
bumperbot_ws/src/bumperbot_description/: package.xml
bumperbot_ws/src/bumperbot_description/launch/: display.launch  gazebo.launch  gazebo.launch.py
bumperbot_ws/src/bumperbot_description/meshes/: camera_link.STL  caster_front_link.STL  caster_rear_link.STL  laser_link.STL  wheel_left_link.STL  wheel_right_link.STL
bumperbot_ws/src/bumperbot_description/urdf/: bumperbot.urdf  bumperbot.urdf.xacro  bumperbot_description.urdf  (+2 more)
bumperbot_ws/src/bumperbot_examples/: CMakeLists.txt  package.xml  setup.py
bumperbot_ws/src/bumperbot_examples/include/bumperbot_examples/: simple_tf_examples.h
bumperbot_ws/src/bumperbot_examples/nodes/: simple_tf_examples_node.cpp  simple_tf_examples_node.py
bumperbot_ws/src/bumperbot_examples/src/: simple_tf_examples.cpp
bumperbot_ws/src/bumperbot_examples/src/bumperbot_examples/: simple_tf_examples.py
bumperbot_ws/src/bumperbot_examples/srv/: GetTransform.srv
bumperbot_ws/src/bumperbot_localization/: CMakeLists.txt  package.xml
bumperbot_ws/src/bumperbot_localization/bumperbot_localization/: imu_republisher.py
bumperbot_ws/src/bumperbot_localization/config/: amcl.yaml  ekf.yaml
bumperbot_ws/src/bumperbot_localization/include/bumperbot_localization/: kalman_filter.h  plot_trajectory.h  simulate_motion_noise.h
bumperbot_ws/src/bumperbot_localization/launch/: amcl.launch  global_localization.launch.py  local_localization.launch  local_localization.launch.py  localization.launch
bumperbot_ws/src/bumperbot_localization/nodes/: imu_republisher_node.cpp  imu_republisher_node.py  plot_trajectory_node.cpp  plot_trajectory_node.py  simulate_motion_noise_node.cpp  simulate_motion_noise_node.py
bumperbot_ws/src/bumperbot_localization/rviz/: amcl.rviz  frames.rviz  localization.rviz
bumperbot_ws/src/bumperbot_localization/src/: imu_republisher.cpp  kalman_filter.cpp  odometry_motion_model.cpp  odometry_motion_model_node.cpp  plot_trajectory.cpp  simulate_motion_noise.cpp
bumperbot_ws/src/bumperbot_localization/src/bumperbot_localization/: kalman_filter.py  plot_trajectory.py  simulate_motion_noise.py
bumperbot_ws/src/bumperbot_mapping/: CMakeLists.txt  package.xml
bumperbot_ws/src/bumperbot_maps/: CMakeLists.txt  package.xml
bumperbot_ws/src/bumperbot_py_examples/: package.xml  setup.py
bumperbot_ws/src/bumperbot_simulation/: CMakeLists.txt  package.xml
bumperbot_ws/src/bumperbot_simulation/launch/: simulation.launch
bumperbot_ws/src/bumperbot_template/: CMakeLists.txt  COLCON_IGNORE  package.xml  setup.py
bumperbot_ws/src/bumperbot_template/action/: Bumperbot.action
bumperbot_ws/src/bumperbot_template/config/: bumperbot_config.yaml
bumperbot_ws/src/bumperbot_template/include/bumperbot_template/: bumperbot.h
bumperbot_ws/src/bumperbot_template/launch/: bumperbot_template.launch
bumperbot_ws/src/bumperbot_template/nodes/: bumperbot_node.cpp  bumperbot_node.py
bumperbot_ws/src/bumperbot_template/src/: bumperbot.cpp
bumperbot_ws/src/bumperbot_template/src/bumperbot_template/: bumperbot.py
bumperbot_ws/src/bumperbot_template/srv/: BumperbotSrv.srv
bumperbot_ws/src/bumperbot_utils/: CMakeLists.txt  package.xml
bumperbot_ws/src/bumperbot_utils/src/: safety_stop.cpp  trajectory_drawer.cpp
(+26 files in other folders)
