<?xml version="1.0"?>
<package format="2">
  <name>bumperbot_simulation</name>
  <version>0.0.0</version>
  <description>The bumperbot_simulation package</description>

  <maintainer email="antonio.brandi@outlook.it">Antonio Brandi</maintainer>
  <license>BSD</license>
  <author email="antonio.brandi@outlook.it">Antonio Brandi</author>


  <buildtool_depend>catkin</buildtool_depend>

</package>
